--- a/views/player_scoreboard.haml
+++ b/views/player_scoreboard.haml
@@ -17,23 +17,22 @@
           %div
             No ascensions yet
         - else
-          - for i in 0..$trophies.size-1 do
+          - for i in 0..$competition_trophy_order.size-1 do
             .scorelisting
               %table.greytable
                 %tr
-                  %th= $trophies_name[i]
+                  %th= $competition_trophy_order[i]
                   %th.competition_value
-                  %th.competition_placing Placing
+                  %th.competition_placing Rank
                 / only show the first 3 places
-                - c = CompetitionScoreEntry.all :variant => variant, :trophy => $trophies[i], :order => [ :rank.asc ], :conditions => [ 'rank <= 3' ]
+                - c = CompetitionScoreEntry.all variant: variant, trophy: $competition_trophy_order[i], order: :rank.asc, conditions: [ 'rank <= 3' ]
                 - for j in 0..c.size-1 do
                   %tr
                     - user = User.get(c[j].user_id).login
                     %td
                       %a{:href => "/user/" + CGI::escape(user)}=h user
-                    - if $trophies[i] == 'fastest_ascension_realtime'
+                    - if $competition_trophy_order[i] == :fastest_ascension_realtime
                       %td.table_number= h parse_seconds(c[j].value)
                     - else
-                      %td.table_number= h c[j].value
+                      %td.table_number= c[j].value.html_formatted
                     %td.table_number= h c[j].rank
-
