--- a/views/user_trophies.haml
+++ b/views/user_trophies.haml
@@ -24,10 +24,13 @@
         - user_trophies = repository.adapter.select "select trophy from scoreentries where user_id = ? and variant = ?", @player.id, @variant
         - row = 1
         - for trophy in trophies
-            - if trophy.row != row
-                - row = trophy.row
-                %br
-            =haml :trophy, locals: { trophy: trophy, achieved: (user_trophies.include? trophy.trophy)}
-            / workaround for the fact that the master of thieves is a quest leader and nemesis
-            - if trophy.trophy == 'defeated_ashikaga_takauji' && (trophy = Trophy.first(variant: @variant, trophy: 'defeated_master_of_thieves'))
+            - newline = trophy.row != row
+            - row = trophy.row
+            - has_trophies_in_this_row = (trophies.select {|t| t.row == trophy.row }.map(&:trophy) & user_trophies).size > 0
+            - if has_trophies_in_this_row || row == 1
+                - if newline
+                    %br
                 =haml :trophy, locals: { trophy: trophy, achieved: (user_trophies.include? trophy.trophy)}
+                / workaround for the fact that the master of thieves is a quest leader and nemesis
+                - if trophy.trophy == 'defeated_ashikaga_takauji' && (trophy = Trophy.first(variant: @variant, trophy: 'defeated_master_of_thieves'))
+                    =haml :trophy, locals: { trophy: trophy, achieved: (user_trophies.include? trophy.trophy)}
