--- a/views/news.haml
+++ b/views/news.haml
@@ -1,5 +1,4 @@
-%h2
-  News and Announcements
+=h2 'News and Announcements'
 - news = News.all(:order => [ :updated_at.desc ])
 - for n in news
   %article= "<b>#{n.created_at.strftime("%Y-%m-%d")}</b>: #{n.html}"
