--- a/views/trophies.haml
+++ b/views/trophies.haml
@@ -4,8 +4,7 @@
       %h1
         Trophies and competitions
       %p
-        %h2
-          Trophies
+        =h2 'Trophies'
         %h3
           Cross-Variant
         %ul.trophypage.indented
@@ -46,8 +45,7 @@
           "All variants" means every variant except NetHack 1.3d.
           NetHack 1.3d does not contribute to the completion of these trophies.
         .text_content.non_top_post
-        %h3
-          All Variants
+        =h3 'All Variants'
         %p
           These trophies apply separately to each variant (excluding NetHack 1.3d).
           Each is worth one point.
@@ -81,8 +79,7 @@
             %span
               Ascension: ascend a character.
         .text_content.non_top_post
-        %h3
-          Variant specific achievements
+        =h3 'Variant specific achievements'
         %p
           These variant specific achievements are listed on their own pages:
           .trophypage
@@ -93,8 +90,7 @@
             %br
         .text_content.non_top_post
 
-        %h3#nh1.3d
-          Nethack 1.3d
+        =h3 'Nethack 1.3d'
         %ul.trophypage.indented
           %li#old-ascension
             %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/old-ascension.png"}
@@ -116,8 +112,7 @@
                 %span
                   defeat Rodney
         .text_content.non_top_post
-        %h2
-          Competitions
+        =h2 'Competitions'
         %h3
           All Variants
         %p
@@ -154,8 +149,7 @@
               (non-overlapping games played on a single game server
               account with no games in-between.)
         .text_content.non_top_post
-        %h3
-          Clan Competitions Trophies
+        =h3 'Clan Competitions Trophies'
         %p
           Each player of a clan contributes to the total clan score.
           Clans are ranked according to clan score.
