--- a/views/deaths.haml
+++ b/views/deaths.haml
@@ -5,7 +5,7 @@
   .content_bulk
     .text_content_wrapper
       .text_content
-        %h2#deaths All deaths (unfiltered)
+        =h2 'All deaths (unfiltered)', 'deaths'
         .scorelisting
           %table.greytable.misc
             %tr
@@ -16,7 +16,7 @@
                 %td.table_number= death.count
                 %td= h death.death
       .text_content.non_top_post
-        %h2#unique_deaths Unique deaths (filtered)
+        =h2 'Unique deaths (filtered)', 'unique_deaths'
         %h3= "(eligible for <a href='/trophies#clan-deaths'>Most unique deaths for Clan Competition</a>)"
         .scorelisting
           %table.greytable.misc
