--- a/views/layout.haml
+++ b/views/layout.haml
@@ -3,7 +3,9 @@
   %head
     %meta{:content => "application/xhtml+xml;charset=utf-8", "http-equiv" => "content-type"}/
     - games_count = Game.count :conditions => [ 'user_id > 0' ]
-    - if games_count == 0 then
+    - if Time.now.to_i < $tournament_signupstarttime
+      %title= 'Junethack'
+    - elsif games_count == 0 then
       %title= "Junethack - #{User.count} players already registered!"
     - else
       %title= "Junethack - #{User.count} players registered - #{games_count} games played!"
