Simple clan banner via Gravatar

--- a/views/clan.haml
+++ b/views/clan.haml
@@ -24,6 +24,10 @@
           - else
             no games
         %span.clear
+
+      #clan_banner
+        %img{src: @clan.gravatar_link}
+
       #clan_trophies.trophycabinet
         %h2
           Clan trophies
