Link FAQ from menu

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -90,6 +90,8 @@
                 %a{:href => "/logout"} Logout
               - if @logged_in then
                 %a{:href => "/login"} Login
+            %li
+              %a{href: "https://nethackwiki.com/wiki/Junethack/FAQ"} FAQ
           %span.clear
       #page_content
         %section#welcome.hcenter
