Typo (thanks ais523)

--- a/views/rules.haml
+++ b/views/rules.haml
@@ -7,7 +7,7 @@
       %p.description
         Rules here are sensible and even generous.
         %br
-        You don't need to use common sense when interpreting this rules, but we might.
+        You don't need to use common sense when interpreting these rules, but we might.
         %br
         Staff make the final decision if something's not clear.
 
