Fix clan invitations

--- a/views/clan.haml
+++ b/views/clan.haml
@@ -37,7 +37,7 @@
             %p
               Your email address is not saved in plain text but only in the
               hashed form necessary for getting it from the Gravatar servers.
-            %form{action: "", method: :post}
+            %form{action: "/clan_banner/#{@clan.name}", method: :post}
               %fieldset
                 .mail
                   %input{name: :mail, type: :text, value: "", autofocus: ""}/
