--- a/views/layout.haml
+++ b/views/layout.haml
@@ -15,6 +15,7 @@
     <meta property="og:description" content="The NetHack Cross-Variant Summer Tournament" />
     <meta property="og:image" content="#{request.scheme}://junethack.net/apple-touch-icon.png" />
     <link rel="alternate" type="application/rss+xml" title="Junethack" href="#{request.scheme}://junethack.net/junethack.rss" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     %link{:href => "/style.css", :rel => "stylesheet", :type => "text/css"}/
     %link{:href => "/back-to-top.css", :rel => "stylesheet", :type => "text/css"}/
     /[if lt IE 9] %script {:src => "http://html5shim.googlecode.com/svn/trunk/html5.js"}
@@ -35,12 +36,21 @@
               %a.logo{:href => "/"} 
                 %img.logo{:alt => "Home", :src => "/logo.png"}/
             %li
-              - if !@logged_in then
-                %a{:href => "/home"} #{h @user.login}'s profile
-              - if @logged_in then
-                %a{:href => "/register"} Register
             %li
-              %a{:href => "/scoreboard"} Results
+              %a{:href => "/games"} Results
+              %ul.nested
+                %li
+                  %a{:href => "/scoreboard"} Clan scoreboard
+                %li
+                  %a{:href => "/player_scoreboard"} Player scoreboard
+                %li
+                  %a{:href => "/trophy_scoreboard"} Trophy scoreboard
+                %li
+                  %a{:href => "/ascensions"} Ascensions
+                %li
+                  %a{:href => "/deaths"} Deaths
+                %li
+                  %a{:href => "/games"} Games
             %li
               %a{:href => "/activity"} Tournament stats
               %ul.nested
@@ -51,24 +61,10 @@
                 %li
                   %a{:href => "/users"} Players
                 %li
-                  %a{:href => "/games"} Games
-                %li
                   %a{:href => "/servers"} Servers
-                %li
-                  %a{:href => "/ascensions"} Ascensions
-                %li
-                  %a{:href => "/deaths"} Deaths
-                %li
-                  %a{:href => "/player_scoreboard"} Player scoreboard
-                %li
-                  %a{:href => "/trophy_scoreboard"} Trophy scoreboard
             %li
-              %a{:href => "/about"} About
+              %a{hiref: '/archive/2017/index.html'} Archives
               %ul.nested
-                %li
-                  %a{:href => "/rules"} Rules
-                %li
-                  %a{:href => "/trophies"} Trophies
                 %li
                   %a{:href => "/archive/2017/index.html"} 2017 tournament
                 %li
@@ -83,15 +79,34 @@
                   %a{:href => "/archive/2012/index.html"} 2012 tournament
                 %li
                   %a{:href => "/archive/2011/index.html"} 2011 tournament
+
+            %li
+              %a{:href => "/about"} About
+              %ul.nested
+                %li
+                  %a{:href => "/rules"} Rules
+                %li
+                  %a{:href => "/trophies"} Trophies
                 %li
                   %a{:href => "/authors.txt"} The project
-            %li
-              - if !@logged_in then
-                %a{:href => "/logout"} Logout
-              - if @logged_in then
-                %a{:href => "/login"} Login
+
             %li
               %a{href: "https://nethackwiki.com/wiki/Junethack/FAQ"} FAQ
+
+          %ul.main.settings
+            - if !@logged_in then
+              %li
+                %a{href: "/user/#{@user.login}"}
+                  %i.fas.fa-user
+              %li
+                %a{href: "/home"}
+                  %i.fas.fa-cog
+              %li
+                %a{href: "/logout"}
+                  %i.fas.fa-sign-out-alt
+            - if @logged_in then
+              %li
+                %a{href: "/login"} Login
           %span.clear
       #page_content
         %section#welcome.hcenter
