--- a/views/rss.haml
+++ b/views/rss.haml
@@ -7,7 +7,7 @@
     %description Junethack - NetHack Cross-Variant Summer Tournament
     <atom:link href="#{request.scheme}://junethack.net/junethack.rss" rel="self" type="application/rss+xml" />
     - events = Event.all(:order => [ :created_at.desc ], :limit => 30)
-    - news = News.all(:order => [ :created_at.desc ])
+    - news = News.all order: [ :created_at.desc ], :created_at.lte => DateTime.now
     - entries = (news.to_a  + events.to_a).sort {|e1, e2| e2['created_at'] <=> e1['created_at']}
     - entries.each do |event|
       %item
